resolución básica imc

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <script src="./script.js"></script>
 </head>
 <body>
-    
+    <h1>Actividad 6: Índice de Masa Corporal (IMC)</h1>
+    <input class="peso" type="number" placeholder="Ingresa tu peso">
+    <input class="altura" type="number" placeholder="Ingresa tu altura">
+    <p class="p">Después que ingreses los valores podrás saber tu IMC</p>
+    <button onclick="action()">Descubre tu IMC</button>
 </body>
 </html>
