resolución básica imc

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Actividad 6: Índice de Masa Corporal (IMC)</h1>
+    <p>Peso</p>
     <input class="peso" type="number" placeholder="Ingresa tu peso">
+    <p>Altura</p>
     <input class="altura" type="number" placeholder="Ingresa tu altura">
     <p class="p">Después que ingreses los valores podrás saber tu IMC</p>
     <button onclick="action()">Descubre tu IMC</button>
