--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p>Altura</p>
     <input class="altura" type="number" placeholder="Ingresa tu altura">
     <p class="p">Después que ingreses los valores podrás saber tu IMC</p>
+    <p class="tipo">Tu tipo de IMC aparecerá aquí...</p>
     <button onclick="action()">Descubre tu IMC</button>
 </body>
 </html>
