--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>Actividad 6: Índice de Masa Corporal (IMC)</h1>
-    <p>Peso</p>
+    <p>Peso:</p>
     <input class="peso" type="number" placeholder="Ingresa tu peso">
-    <p>Altura</p>
+    <p>Altura:</p>
     <input class="altura" type="number" placeholder="Ingresa tu altura">
     <p class="p">Después que ingreses los valores podrás saber tu IMC</p>
     <p class="tipo">Tu tipo de IMC aparecerá aquí...</p>
